<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@android:color/transparent"
	android:gravity="center">
	<LinearLayout
		android:id="@+id/layout_add_task"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@drawable/bg_popup_default"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp">
		<RelativeLayout
			android:id="@+id/layout_add_task_title_area"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@drawable/bg_popup_top">
			<!-- Title -->
			<TextView
				android:id="@+id/txt_add_task_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:layout_centerInParent="true"
				android:text="@string/tit_add_task"
				style="@style/dialog_top"/>
			<ImageView
				android:id="@+id/img_add_task_close"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:src="@drawable/ic_close_white_24dp"
				android:layout_margin="10dp" />
		</RelativeLayout>

		<LinearLayout
			android:id="@+id/layout_add_task_content"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:descendantFocusability="beforeDescendants"
				android:focusableInTouchMode="true"
				android:padding="10dp">
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_name"
					style="@style/text_normal" />
				<EditText
					android:id="@+id/edit_add_task_name"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:selectAllOnFocus="true"
					android:singleLine="true"
					style="@style/text_normal" />
			</LinearLayout>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:padding="10dp">
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/label_function"
					style="@style/text_normal" />
				<TextView
					android:id="@+id/txt_add_task_funcion"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="3"
					style="@style/text_normal" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/layout_add_task_param_container"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/layout_add_task_button_area"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:layout_marginBottom="15dp"
			android:gravity="center"
			android:orientation="horizontal">
			<!-- Yes button -->
			<Button
				android:id="@+id/btn_add_task_register"
				android:layout_width="0dp"
				android:layout_height="38dp"
				android:layout_weight="1"
				android:text="@string/register"
				style="@style/btn_second" />
			<!-- No Button -->
			<Button
				android:id="@+id/btn_add_task_write"
				android:layout_width="0dp"
				android:layout_height="38dp"
				android:layout_weight="1"
				android:text="@string/write_to_tag"
				style="@style/btn_first"
				android:layout_marginLeft="5dp" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>